--- a/site/src/index.css
+++ b/site/src/index.css
@@ -43,6 +43,7 @@
 		--radius: 0.5rem;
 		--highlight-purple: 262 83% 58%;
 		--highlight-green: 143 64% 24%;
+		--highlight-orange: 30 100% 54%;
 		--highlight-grey: 240 5% 65%;
 		--highlight-sky: 201 90% 27%;
 		--highlight-red: 0 74% 42%;
@@ -86,6 +87,7 @@
 		--overlay-default: 240 10% 4% / 80%;
 		--highlight-purple: 252 95% 85%;
 		--highlight-green: 141 79% 85%;
+		--highlight-orange: 31 100% 70%;
 		--highlight-grey: 240 4% 46%;
 		--highlight-sky: 198 93% 60%;
 		--highlight-red: 0 91% 71%;
