--- a/site/src/index.css
+++ b/site/src/index.css
@@ -45,6 +45,7 @@
 		--radius: 0.5rem;
 		--highlight-purple: 271, 61%, 35%;
 		--highlight-green: 143 64% 24%;
+		--highlight-orange: 30 100% 54%;
 		--highlight-grey: 240 5% 65%;
 		--highlight-sky: 195, 61%, 22%;
 		--highlight-red: 0 74% 42%;
@@ -91,6 +92,7 @@
 		--overlay-default: 240 10% 4% / 80%;
 		--highlight-purple: 269, 100%, 74%;
 		--highlight-green: 141 79% 85%;
+		--highlight-orange: 31 100% 70%;
 		--highlight-grey: 240 4% 46%;
 		--highlight-sky: 188, 75%, 80%;
 		--highlight-red: 0 91% 71%;
